--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
                                         <hr color="#FAFAFA" size="7px">
 <body bgcolor="#2E9AFE">
-	<font style="position: absolute;top: 100px;right: 900px;"><a href="periodo 1.html"><img src="u.png"width="100" height="100"></a></font>
-	<font style="position: absolute;top: 100px;right: 700px;"><a href="periodo 2.html"><img src="jj.png"width="100" height="100"></a></font>
+	 
+	<font style="position: absolute;top: 100px;right: 700px;"><a href="periodo2.html"><img src="jj.png"width="100" height="100"></a></font>
 	<font style="position: absolute;top: 100px;right: 500px;"><a href="periodo 3.html"><img src="juan.png"width="100" height="100"></a></font>
 	<center><font style="position: absolute;top: 100px;right: 300px;"><a href="periodo 4.html"><img src="aa.png"width="100" height="100"></a></font></center>
 
 
 
-	<font style="position: absolute;top: 310px;right: 575px;"><img src="jujo.jpg" style="border: solid black 5px" width="250" height="250"></font>
+	<font style="position: absolute;top: 310px;right: 575px;"><img src="jujo.jpg.JPG" style="border: solid black 5px" width="250" height="250"></font>
   	
 
 
